Updated portfolio live link to clean domain

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
   <meta itemprop="description" content="Portfolio website of Pathan Baba Fakruddin showcasing projects, skills, and achievements.">
   <meta itemprop="image" content="%PUBLIC_URL%/portfolio-preview.png">
 
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://your-vercel-portfolio-link.vercel.app">
+  <!-- Facebook / Open Graph -->
+  <meta property="og:url" content="https://pathan-portfolio.vercel.app/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="PATHAN BABA FAKRUDDIN | Portfolio">
   <meta property="og:description" content="Official portfolio website of Pathan Baba Fakruddin built with React.js">
@@ -28,6 +28,7 @@
   <meta name="twitter:title" content="PATHAN BABA FAKRUDDIN | Portfolio">
   <meta name="twitter:description" content="Explore projects, skills, and achievements of Pathan Baba Fakruddin.">
   <meta name="twitter:image" content="%PUBLIC_URL%/portfolio-preview.png">
+
 </head>
 
 <body>
