Update meta description for portfolio website

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Portfolio website of Pathan Baba Fakruddin built with React.js" />
+<meta name="description" content="Portfolio website of Pathan Baba Fakruddin, a Computer Science graduate and full-stack developer.">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>PATHAN BABA FAKRUDDIN | Portfolio</title>
